# vector

./: Cargo.toml  Dockerfile  docker-compose.yml
config/: default.toml
src/: lib.rs
src/sinks/azure_common/: config.rs
src/sources/: mod.rs
src/sources/azure_event_hub/: Cargo.toml  blob_client.rs  checkpoint.rs  client.rs  config.rs  eventhub.rs  lib.rs  manager.rs  mod.rs  processor.rs  processor_pipeline.rs
