[package]
name = "azure_event_hub_source"
version = "0.1.0"
edition = "2021"
description = "Azure Event Hub source plugin for Vector"
authors = ["0xSecureByte <chirantan.code@gmail.com>"]
license = "MPL-2.0"

[lib]
name = "azure_event_hub_source"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.42.0", default-features = false, features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
futures = "0.3"
vector-lib = { path = "../../../lib/vector-lib", default-features = false }
vector-config = { path = "../../../lib/vector-config" }
inventory = "0.3"
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
hmac-sha256 = "1.1"
urlencoding = "2.1"
base64 = "0.22.1"
tower = { version = "0.5.2", features = ["retry"] }
